<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Brown\'s Criterion: Number Guessing</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello">hello</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_120">120</string>
    <string name="_118">118</string>
    <string name="_117">117</string>
    <string name="_119">119</string>
    <string name="textview">TextView</string>
    <string name="can_you_find_your_number_here_">Can you find your number here?</string>
    <string name="title_activity_game_">Guess the Number</string>
    <string name="play">Play</string>
    <string name="highscore">Highscore</string>
    <string name="child_guess">Child-Guess</string>
    <string name="app_guess">App-Guess</string>
    <string name="free_play">Free-Play</string>
    <string name="welcome_">"Welcome, "</string>
    <string name="card_type_">"Card Type: "</string>
    <string name="number_range_">"Number Range: "</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="_">" - "</string>
    <string name="_1_20">1 - 20</string>
    <string name="max_100">Max 100</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="your_number_is_not_found_here">Your number is not found here</string>
    <string name="your_number_is_not_found_here_">Your number is not found here!</string>
    <string name="title_activity_child_game">ChildGameActivity</string>
    <string name="one_of_these_numbers_is_my_secret_number_">One of these numbers is my secret number!</string>
    <string name="guess">Guess</string>
    <string name="title_activity_free_game">FreeGameActivity</string>
    <string name="card_1_10">Card 1/10</string>
    <string name="card_1_out_of_10">Card 1 out of 10</string>
    <string name="title_activity_highscore">HighscoreActivity</string>
    <string name="name">Name</string>
    <string name="score">Score</string>

</resources>
