<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/notebook_paper_wallpaper"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/cardNumberLbl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.72"
        android:gravity="center"
        android:text="@string/card_1_out_of_10"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/numberPresentLbl"
        android:layout_width="278dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/one_of_these_numbers_is_my_secret_number_"
        android:textColor="#00ff00"
        android:textSize="16sp"
        android:visibility="visible" />

    <GridView
        android:id="@+id/GridView1"
        android:layout_width="wrap_content"
        android:layout_height="214dp"
        android:layout_weight="1"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:longClickable="false"
        android:numColumns="5"
        android:background="@drawable/card"
        android:gravity="center"
        android:verticalSpacing="3dp"
        android:paddingTop="15dp" >
    </GridView>

    <RelativeLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.07"
        android:visibility="visible" >

        <Button
            android:id="@+id/guessBtn"
            style="@style/customBtnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="GuessClicked"
            android:text="@string/guess"
            android:visibility="invisible" />

    </RelativeLayout>

</LinearLayout>